--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-pdf": "^6.2.2",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
