--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-icons": "^4.7.1",
     "react-pdf": "^6.2.2",
     "react-scroll": "^1.8.9",
-    "react-typed": "^1.2.0"
+    "react-tsparticles": "^2.9.3",
+    "react-typed": "^1.2.0",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
